Added some changes

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -17,9 +17,10 @@
 </head>
 
 <body>
-  <nav>
-    <div>
-      <img src="./images/slack-logo.png" alt="Slack logo" />
+  <div class="container">
+  <nav class="nav">
+    <div class="div-1">
+      <img src="./images/slack-logo.png" alt="Slack logo"  width="100px"/>
 
       <ul>
         <li>
@@ -56,6 +57,8 @@
       </ul>
     </div>
   </nav>
+</div>
+
 
   <header>
     <div>
@@ -63,7 +66,7 @@
 
       <p>Slack is free to try for as long as you'd like.</p>
 
-      <div>
+      <div class="sign-in">
         <button>Sign up with email</button>
 
         <button>
@@ -79,17 +82,17 @@
     </div>
   </header>
 
-  <main>
+  <main class="main">
     <section>
       <p>Trusted by companies all over the world</p>
 
-      <div>
-        <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
-        <img src="./images/logo-nasa.png" alt="NASA logo" />
-        <img src="./images/logo-uber.png" alt="Uber logo" />
-        <img src="./images/logo-target.png" alt="Target logo" />
-        <img src="./images/logo-nyt.png" alt="New York Times logo" />
-        <img src="./images/logo-spotify.png" alt="Spotify logo" />
+      <div class="align-logos">
+        <img src="./images/logo-airbnb.png" alt="Airbnb logo"                       class="logos"/>
+        <img src="./images/logo-nasa.png" alt="NASA logo"                           class="logos"/>
+        <img src="./images/logo-uber.png" alt="Uber logo"                           class="logos"  />
+        <img src="./images/logo-target.png" alt="Target logo"                       class="logos" />
+        <img src="./images/logo-nyt.png" alt="New York Times logo"            class="logos" />
+        <img src="./images/logo-spotify.png" alt="Spotify logo"                     class="logos" />
       </div>
 
     </section>
