--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,278 +1,285 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Test</title>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div>
+          <img src="./images/images/slack-logo.png" alt="Slack Logo" class="" />
+        </div>
+        <nav>
+          <div>
+            <button>
+              <img
+                src="./images/images/icon-search.png"
+                alt="Search icon"
+                style="background-color: transparent"
+              />
+            </button>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+            <button>
+              <img src="./images/images/icon-menu.png" alt="Menu icon" />
+            </button>
+          </div>
 
-  <!-- link the Font Awesome stylesheet - CDN -->
-  <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet" />
-
-  <!-- link your styles -->
-  <link rel="stylesheet" href="./stylesheets/style.css" />
-
-  <link rel="icon" type="image/x-icon" href="./images/slack-icon.png">
-  <title>Slack is your digital HQ | Slack</title>
-</head>
-
-<body>
-  <div class="container">
-  <nav class="nav">
-    <div class="div-1">
-      <img src="./images/slack-logo.png" alt="Slack logo"  width="100px"/>
-
-      <ul>
-        <li>
-          <a href="#">Product</a>
-        </li>
-        <li>
-          <a href="#">Solutions</a>
-        </li>
-        <li>
-          <a href="#">Resources</a>
-        </li>
-        <li>
-          <a href="#">Pricing</a>
-        </li>
-      </ul>
-    </div>
-
-    <div>
-      <button>
-        <img src="./images/icon-search.png" alt="Search icon">
-      </button>
-
-      <button>
-        <img src="./images/icon-menu.png" alt="Menu icon">
-      </button>
-
-      <ul hidden>
-        <li>
-          <a href="#">Sign in</a>
-        </li>
-        <li>
-          <a href="#">Try for free</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
-
-
-  <header>
-    <div>
-      <h1>Great teamwork starts with a digital HQ</h1>
-
-      <p>Slack is free to try for as long as you'd like.</p>
-
-      <div class="sign-in">
-        <button>Sign up with email</button>
-
-        <button>
-          <img src="./images/logo-google.png" alt="Google logo" />
-          <span>Sign up with Google</span>
-        </button>
+          <ul class="un-list" hidden>
+            <li><a href="">Product</a></li>
+            <li><a href="">Solutions</a></li>
+            <li><a href="">Resources</a></li>
+            <li><a href="">Pricing</a></li>
+          </ul>
+        </nav>
       </div>
+      <section class="sec-1">
+        <h1 class="heading">Great teamwork starts with a digital HQ</h1>
+        <p class="p-1">
+          <span style="color: gold">Slack is free to try </span> for as long as
+          you'd like
+        </p>
+        <div class="log-in">
+          <button class="btn-1">Sign up with Email</button>
 
-    </div>
+          <button class="btn-2">
+            <img
+              src="./images/images/logo-google.png"
+              alt="google logo"
+              style="background-color: aliceblue; width: 30px"
+            />
+            Sign up with Google
+          </button>
+        </div>
+        <div>
+          <img
+            src="./images/images/hero-product-ui.png"
+            alt="big-purple theme images"
+            style="max-width: 100%; height: auto"
+          />
+        </div>
+      </section>
+    </header>
 
-    <div>
-      <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
-    </div>
-  </header>
+    <main>
+      <section class="section-2">
+        <p style="font-weight: bold">Trusted by companies all over the world</p>
 
-  <main class="main">
-    <section>
-      <p>Trusted by companies all over the world</p>
+        <div class="imgs">
+          <img src="./images/images/logo-airbnb.png" alt="" />
+          <img src="./images/images/logo-nasa.png" alt="" />
+          <img src="./images/images/logo-uber.png" alt="" />
+          <img src="./images/images/logo-target.png" alt="" />
+          <img src="./images/images/logo-nyt.png" alt="" />
+          <img src="./images/images/logo-spotify.png" alt="" />
+        </div>
+        <div>
+          <img
+            src="./images/images/connectedness-mobile.png"
+            alt=""
+            style="max-width: 100%; height: auto"
+          />
+        </div>
+      </section>
 
-      <div class="align-logos">
-        <img src="./images/logo-airbnb.png" alt="Airbnb logo"                       class="logos"/>
-        <img src="./images/logo-nasa.png" alt="NASA logo"                           class="logos"/>
-        <img src="./images/logo-uber.png" alt="Uber logo"                           class="logos"  />
-        <img src="./images/logo-target.png" alt="Target logo"                       class="logos" />
-        <img src="./images/logo-nyt.png" alt="New York Times logo"            class="logos" />
-        <img src="./images/logo-spotify.png" alt="Spotify logo"                     class="logos" />
-      </div>
+      <section class="section-3">
+        <div>
+          <img src="" alt="" />
+        </div>
+        <div>
+          <h2>Bring your team together</h2>
 
-    </section>
+          <p class="para">
+            At the heart of Slack are chanels: organized spaces for everyone and
+            everything you need foe work. In channels, it's easier to connect
+            across departments, offices, time zones and even other companies.
+          </p>
 
-    <section>
-      <div>
-        <img src="./images/connectedness-mobile.png" alt="connectedness" />
-      </div>
+          <a href="#" class="link"><span>Learn More about chanels -></span></a>
+        </div>
+      </section>
 
-      <div>
-        <h2>Bring your team together</h2>
+      <section class="section-4">
+        <div>
+          <h2>Choose how you want to work</h2>
 
-        <p>
-          At the heart of Slack are channels: organized spaces for everyone and everything you need for work. In
-          channels, it's easier to connect across departments, offices, time zones and even other companies.
+          <p class="para">
+            In Slack, you've got all the flexibility to work when, where and hoe
+            it's best for you. You can easily chat, send audio and video clips,
+            or hop on a hubble to talk things out live.
+          </p>
+
+          <a href="#" class="link">
+            <span>Learn more about flexible comunication -></span>
+          </a>
+        </div>
+
+        <div>
+          <img
+            src="./images/images/flexibility-mobile.png"
+            alt="flexibility"
+            style="max-width: 100%; height: auto"
+          />
+        </div>
+      </section>
+      <section class="section-4">
+        <div>
+          <h2>Choose how you want to work</h2>
+          <p class="para">
+            In Slack, you’ve got all the flexibility to work when, where and how
+            it’s best for you. You can easily chat, send audio and video clips,
+            or hop on a huddle to talk things out live.
+          </p>
+
+          <a href="#" class="link">
+            <span>Learn more about flexible communication</span>
+          </a>
+        </div>
+      </section>
+      <section class="section-4">
+        <div>
+          <img
+            src="./images/images/speed-mobile.png"
+            alt="speed"
+            style="max-width: 100%; height: auto"
+          />
+        </div>
+
+        <div>
+          <h2>Move faster with your tools in one place</h2>
+          <p class="para">
+            With your other work apps connected to Slack, you can work faster by
+            switching tabs less. And with powerful tools like Workflow Builder,
+            you can automate away routine tasks.
+          </p>
+
+          <a href="#" class="link">
+            <span>Learn more about the Slack platform</span>
+          </a>
+        </div>
+      </section>
+      <section class="section-5">
+        <h3 class="head3">Teams large and small rely on Slack</h3>
+        <p class="p-1">
+          Slack securely scales up to support collaboration at the world’s
+          biggest companies.
         </p>
 
-        <a href="#">
-          <span>Learn more about channels</span>
-        </a>
-      </div>
-    </section>
+        <div>
+          <button class="btn-3">Meet Slack for enterprise</button>
+          <button class="btn-4">Talk to sales</button>
+        </div>
 
-    <section>
-      <div>
-        <h2>Choose how you want to work</h2>
-        <p>
-          In Slack, you’ve got all the flexibility to work when, where and how it’s best for you. You can easily chat,
-          send
-          audio and video clips, or hop on a huddle to talk things out live.
-        </p>
+        <ul class="list">
+          <li>
+            <p><span class="percentage">85%</span></p>
+            <p class="p-2">
+              of users say Slack has improved communication
+              <sup>*</sup>
+            </p>
+          </li>
 
-        <a href="#">
-          <span>Learn more about flexible communication</span>
-        </a>
-      </div>
+          <li>
+            <p><span class="percentage">86%</span></p>
+            <p class="p-2">
+              feel their ability to work remotely has improved has improved
+              <sup>*</sup>
+            </p>
+          </li>
 
-      <div>
-        <img src="./images/flexibility-mobile.png" alt="flexibility" />
-      </div>
-    </section>
+          <li>
+            <p><span class="percentage">88%</span></p>
+            <p class="p-2">
+              feel more connected to their teams*
+              <sup>*</sup>
+            </p>
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <div>
-        <img src="./images/speed-mobile.png" alt="speed" />
-      </div>
+      <section class="section-6">
+        <h3>Welcome to your new digital HQ</h3>
 
-      <div>
-        <h2>Move faster with your tools in one place</h2>
-        <p>
-          With your other work apps connected to Slack, you can work faster by switching tabs less. And with powerful
-          tools like Workflow Builder, you can automate away routine tasks.
-        </p>
-
-        <a href="#">
-          <span>Learn more about the Slack platform</span>
-        </a>
-      </div>
-    </section>
-
-
-    <section>
-      <h3>Teams large and small rely on Slack</h3>
-      <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
-
-      <div>
-        <button>Meet Slack for enterprise</button>
+        <button>Try for free</button>
         <button>Talk to sales</button>
+      </section>
+    </main>
+
+    <footer>
+      <img src="./images/iso-slack.png" alt="Slack logo" />
+      <div>
+        <ul>
+          <li>WHY SLACK?</li>
+          <li>Slack vs. Email</li>
+          <li>Channels</li>
+          <li>Engagement</li>
+          <li>Scale</li>
+          <li>Watch the Demo</li>
+        </ul>
+
+        <ul>
+          <li>PRODUCT</li>
+          <li>Features</li>
+          <li>Integrations</li>
+          <li>Enterprise</li>
+          <li>Solutions</li>
+          <li>Releases</li>
+        </ul>
+
+        <ul>
+          <li>PRICING</li>
+          <li>Plans</li>
+          <li>Paid vs. Free</li>
+        </ul>
+
+        <ul>
+          <li>COMPANY</li>
+          <li>About Us</li>
+          <li>Leadership</li>
+          <li>Investor Relations</li>
+          <li>News</li>
+          <li>Media Kit</li>
+          <li>Careers</li>
+        </ul>
       </div>
 
       <ul>
+        <li>Status</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>Cookie Preferences</li>
+        <li>Contact Us</li>
+        <li>Change Region</li>
+        <li>Download Slack</li>
+      </ul>
+
+      <hr />
+
+      <ul>
         <li>
-          <p><span>85%</span></p>
-          <p>
-            of users say Slack has improved communication
-            <sup>*</sup>
-          </p>
+          <i class="fab fa-twitter"></i>
         </li>
-
         <li>
-          <p><span>86%</span></p>
-          <p>
-            feel their ability to work remotely has improved has improved
-            <sup>*</sup>
-          </p>
+          <i class="fab fa-facebook"></i>
         </li>
-
         <li>
-          <p><span>88%</span></p>
-          <p>
-            feel more connected to their teams*
-            <sup>*</sup>
-          </p>
+          <i class="fab fa-youtube"></i>
+        </li>
+        <li>
+          <i class="fab fa-linkedin"></i>
         </li>
       </ul>
-    </section>
 
-    <section>
-      <h3>Welcome to your new digital HQ</h3>
-
-      <button>Try for free</button>
-      <button>Talk to sales</button>
-    </section>
-
-  </main>
-
-  <footer>
-    <img src="./images/iso-slack.png" alt="Slack logo" />
-    <div>
-      <ul>
-        <li>WHY SLACK?</li>
-        <li>Slack vs. Email</li>
-        <li>Channels</li>
-        <li>Engagement</li>
-        <li>Scale</li>
-        <li>Watch the Demo</li>
-      </ul>
-
-      <ul>
-        <li>PRODUCT</li>
-        <li>Features</li>
-        <li>Integrations</li>
-        <li>Enterprise</li>
-        <li>Solutions</li>
-        <li>Releases</li>
-      </ul>
-
-      <ul>
-        <li>PRICING</li>
-        <li>Plans</li>
-        <li>Paid vs. Free</li>
-      </ul>
-
-      <ul>
-        <li>COMPANY</li>
-        <li>About Us</li>
-        <li>Leadership</li>
-        <li>Investor Relations</li>
-        <li>News</li>
-        <li>Media Kit</li>
-        <li>Careers</li>
-      </ul>
-    </div>
-
-
-    <ul>
-      <li>Status</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>Cookie Preferences</li>
-      <li>Contact Us</li>
-      <li>Change Region</li>
-      <li>Download Slack</li>
-    </ul>
-
-    <hr>
-
-    <ul>
-      <li>
-        <i class="fab fa-twitter"></i>
-      </li>
-      <li>
-        <i class="fab fa-facebook"></i>
-      </li>
-      <li>
-        <i class="fab fa-youtube"></i>
-      </li>
-      <li>
-        <i class="fab fa-linkedin"></i>
-      </li>
-    </ul>
-
-    <div>
-      <small>
-        &copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights reserved. Various trademarks held by
-        their respective owners.
-      </small>
-    </div>
-
-  </footer>
-</body>
-
+      <div>
+        <small>
+          &copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights
+          reserved. Various trademarks held by their respective owners.
+        </small>
+      </div>
+    </footer>
+    </main>
+  </body>
 </html>
