--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/starter_code/stylesheets/styles.css" />
     <title>Test</title>
   </head>
   <body>
     <header>
       <div class="container">
         <div>
-          <img src="./images/images/slack-logo.png" alt="Slack Logo" class="" />
+          <img src="/starter_code/images/slack-logo.png" alt="Slack Logo" class="" />
         </div>
         <nav>
           <div>
             <button>
               <img
-                src="./images/images/icon-search.png"
+                src="/starter_code/images/icon-search.png"
                 alt="Search icon"
                 style="background-color: transparent"
               />
             </button>
 
             <button>
-              <img src="./images/images/icon-menu.png" alt="Menu icon" />
+              <img src="/starter_code/images/icon-menu.png" alt="Menu icon" />
             </button>
           </div>
 
@@ -47,7 +47,7 @@
 
           <button class="btn-2">
             <img
-              src="./images/images/logo-google.png"
+              src="/starter_code/images/logo-google.png"
               alt="google logo"
               style="background-color: aliceblue; width: 30px"
             />
@@ -56,7 +56,7 @@
         </div>
         <div>
           <img
-            src="./images/images/hero-product-ui.png"
+            src="/starter_code/images/hero-product-ui.png"
             alt="big-purple theme images"
             style="max-width: 100%; height: auto"
           />
@@ -69,16 +69,16 @@
         <p style="font-weight: bold">Trusted by companies all over the world</p>
 
         <div class="imgs">
-          <img src="./images/images/logo-airbnb.png" alt="" />
-          <img src="./images/images/logo-nasa.png" alt="" />
-          <img src="./images/images/logo-uber.png" alt="" />
-          <img src="./images/images/logo-target.png" alt="" />
-          <img src="./images/images/logo-nyt.png" alt="" />
-          <img src="./images/images/logo-spotify.png" alt="" />
+          <img src="/starter_code/images/logo-airbnb.png" alt="" />
+          <img src="/starter_code/images/logo-nasa.png" alt="" />
+          <img src="/starter_code/images/logo-uber.png" alt="" />
+          <img src="/starter_code/images/logo-target.png" alt="" />
+          <img src="/starter_code/images/logo-nyt.png" alt="" />
+          <img src="/starter_code/images/logo-spotify.png" alt="" />
         </div>
         <div>
           <img
-            src="./images/images/connectedness-mobile.png"
+            src="/starter_code/images/connectedness-mobile.png"
             alt=""
             style="max-width: 100%; height: auto"
           />
@@ -119,7 +119,7 @@
 
         <div>
           <img
-            src="./images/images/flexibility-mobile.png"
+            src="/starter_code/images/flexibility-mobile.png"
             alt="flexibility"
             style="max-width: 100%; height: auto"
           />
@@ -142,7 +142,7 @@
       <section class="section-4">
         <div>
           <img
-            src="./images/images/speed-mobile.png"
+            src="/starter_code/images/speed-mobile.png"
             alt="speed"
             style="max-width: 100%; height: auto"
           />
@@ -209,7 +209,7 @@
     </main>
 
     <footer>
-      <img src="./images/iso-slack.png" alt="Slack logo" />
+      <img src="/starter_code/images/iso-slack.png" alt="Slack logo" />
       <div>
         <ul>
           <li>WHY SLACK?</li>
